--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,7 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Prevent RollupParentResetProcessor from accidentally wiping out correctly calculated values",
+            "versionName": "Prevent RollupParentResetProcessor from accidentally wiping out correctly calculated values, added date literal function support",
             "versionNumber": "1.3.20.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
