--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -93,19 +93,11 @@
         "Apex Rollup - Rollup Callback@0.0.1-0": "04t6g000008ShTJAA0",
         "Apex Rollup - Rollup Callback@0.0.2-0": "04t6g000008ShztAAC",
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
-        "apex-rollup@1.3.5-0": "04t6g000008ShhXAAS",
-        "apex-rollup@1.3.6-0": "04t6g000008Shn7AAC",
-        "apex-rollup@1.3.7-0": "04t6g000008Si03AAC",
+        "Apex Rollup - Extra Code Coverage@0.0.1-0": "04t6g000008SiTHAA0",
+        "apex-rollup@1.3.0-0": "04t6g000008ShUCAA0",
         "apex-rollup@1.3.8-0": "04t6g000008Si24AAC",
-        "apex-rollup@1.3.9-0": "04t6g000008Si5XAAS",
-        "apex-rollup@1.3.10-0": "04t6g000008SiG7AAK",
-        "apex-rollup@1.3.11-0": "04t6g000008SiHjAAK",
-        "apex-rollup@1.3.12-0": "04t6g000008SiLRAA0",
-        "apex-rollup@1.3.13-0": "04t6g000008SiM0AAK",
-        "apex-rollup@1.3.14-0": "04t6g000008SiQIAA0",
         "apex-rollup@1.3.15-0": "04t6g000008SiRGAA0",
         "apex-rollup@1.3.16-0": "04t6g000008SiSdAAK",
-        "Apex Rollup - Extra Code Coverage@0.0.1-0": "04t6g000008SiTHAA0",
         "apex-rollup@1.3.17-0": "04t6g000008SiTgAAK",
         "apex-rollup@1.3.18-0": "04t6g000008SiUyAAK",
         "apex-rollup@1.3.19-0": "04t6g000008SiVIAA0",
