--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Fixing bug with grandparent rollup reparenting, efficiency improvements",
-            "versionNumber": "1.3.21.0",
+            "versionName": "Further efficiency improvements in RollupAsyncProcessor by removing extra call to RollupEvaluator",
+            "versionNumber": "1.3.22.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
