--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -68,11 +68,11 @@
             "path": "plugins\\ExtraCodeCoverage",
             "package": "Apex Rollup - Extra Code Coverage",
             "versionName": "Updating code coverage",
-            "versionNumber": "0.0.1.0",
+            "versionNumber": "0.0.2.0",
             "default": false,
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.3.15-0"
+                    "package": "apex-rollup@1.3.21-0"
                 }
             ]
         }
@@ -103,6 +103,7 @@
         "apex-rollup@1.3.19-0": "04t6g000008SiVIAA0",
         "apex-rollup@1.3.20-0": "04t6g000008SiaJAAS",
         "apex-rollup@1.3.21-0": "04t6g000008SigrAAC",
-        "apex-rollup@1.3.22-0": "04t6g000008SihfAAC"
+        "apex-rollup@1.3.22-0": "04t6g000008SihfAAC",
+        "Apex Rollup - Extra Code Coverage@0.0.2-0": "04t6g000008SihpAAC"
     }
 }
