--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -68,7 +68,7 @@
             "path": "plugins\\ExtraCodeCoverage",
             "package": "Apex Rollup - Extra Code Coverage",
             "versionName": "Updating code coverage",
-            "versionNumber": "0.0.2.0",
+            "versionNumber": "0.0.3.0",
             "default": false,
             "dependencies": [
                 {
@@ -94,7 +94,7 @@
         "Apex Rollup - Rollup Callback@0.0.2-0": "04t6g000008ShztAAC",
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
         "Apex Rollup - Extra Code Coverage@0.0.1-0": "04t6g000008SiTHAA0",
-        "Apex Rollup - Extra Code Coverage@0.0.2-0": "04t6g000008SihpAAC",
+        "Apex Rollup - Extra Code Coverage@0.0.3-0": "04t6g000008Sii9AAC",
         "apex-rollup@1.3.0-0": "04t6g000008ShUCAA0",
         "apex-rollup@1.3.8-0": "04t6g000008Si24AAC",
         "apex-rollup@1.3.15-0": "04t6g000008SiRGAA0",
