--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,7 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Further efficiency improvements in RollupAsyncProcessor by removing extra call to RollupEvaluator",
+            "versionName": "Added current version to RollupLogger, bugfixes",
             "versionNumber": "1.3.22.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
@@ -32,13 +32,14 @@
             "path": "plugins\\NebulaLogger",
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.3.8-0"
+                    "package": "apex-rollup@1.3.22-0"
                 },
                 {
                     "package": "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements"
                 }
             ],
-            "versionNumber": "0.0.5.0",
+            "versionNumber": "0.0.6.0",
+            "versionName": "Adding base Rollup string and version number",
             "versionDescription": "Provides an adapter that hooks rollup debug logging up to Nebula Logger",
             "default": false,
             "unpackagedMetadata": {
@@ -88,6 +89,7 @@
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.4-0": "04t6g000008ShzoAAC",
         "Apex Rollup - Nebula Logger@0.0.5-0": "04t6g000008Si1BAAS",
+        "Apex Rollup - Nebula Logger@0.0.6-0": "04t6g000008SiisAAC",
         "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements": "04t5Y0000027FNaQAM",
         "Apex Rollup - Rollup Callback": "0Ho6g000000GnA1CAK",
         "Apex Rollup - Rollup Callback@0.0.1-0": "04t6g000008ShTJAA0",
@@ -104,6 +106,6 @@
         "apex-rollup@1.3.19-0": "04t6g000008SiVIAA0",
         "apex-rollup@1.3.20-0": "04t6g000008SiaJAAS",
         "apex-rollup@1.3.21-0": "04t6g000008SigrAAC",
-        "apex-rollup@1.3.22-0": "04t6g000008SiiEAAS"
+        "apex-rollup@1.3.22-0": "04t6g000008SiixAAC"
     }
 }
