--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apex-rollup",
-  "version": "1.3.21",
+  "version": "1.3.22",
   "description": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
     "@salesforce/eslint-plugin-aura": "latest",
     "@salesforce/eslint-plugin-lightning": "latest",
     "@salesforce/sfdx-lwc-jest": "0.12.5",
+    "@salesforce/sfdx-scanner": "latest",
     "eslint": "latest",
     "eslint-config-prettier": "latest",
     "husky": "latest",
@@ -38,13 +39,13 @@
   ],
   "scripts": {
     "create:package:rollup": "sfdx force:package:version:create --package \"apex-rollup\" -w 20 -x -c",
-    "create:package:nebula:adapter": "sfdx force:package:version:create --package \"Apex Rollup - Nebula Logger\" -w 20 -x -c",
-    "create:package:logger": "sfdx force:package:version:create --package \"Apex Rollup - Custom Logger\" -w 20 -x -c",
-    "create:package:callback": "sfdx force:package:version:create --package \"Apex Rollup - Rollup Callback\" -w 20 -x -c",
-    "create:package:code-coverage": ". ./scripts/generateExtraCodeCoveragePlugin.ps1",
+    "create:package:nebula:adapter": "pwsh -Command \"&{ . ./scripts/generatePlugin.ps1; Generate -PackageName '\"Apex Rollup - Nebula Logger\"' -ReadmePath \"./plugins/NebulaLogger/README.md\" }\"",
+    "create:package:logger": "pwsh -Command \"&{ . ./scripts/generatePlugin.ps1; Generate -PackageName '\"Apex Rollup - Custom Logger\"' -ReadmePath \"./plugins/CustomObjectRollupLogger/README.md\" }\"",
+    "create:package:callback": "pwsh -Command \"&{ . ./scripts/generatePlugin.ps1; Generate -PackageName '\"Apex Rollup - Rollup Callback\"' -ReadmePath \"./plugins/RollupCallback/README.md\"\" }\"",
+    "create:package:code-coverage": "pwsh -Command \"&{ . ./scripts/generatePlugin.ps1; Generate -PackageName '\"Apex Rollup - Extra Code Coverage\"' -ReadmePath \"./plugins/ExtraCodeCoverage/README.md\" }\"",
     "husky:pre-commit": "lint-staged",
     "lint:verify": "eslint **/lwc/**",
-    "prepare": "husky install",
+    "prepare": "husky install && sfdx plugins:link ./node_modules/@salesforce/sfdx-scanner",
     "prettier": "prettier",
     "scan": "sfdx scanner:run --pmdconfig config/pmd-ruleset.xml --target . --engine pmd --severity-threshold 3",
     "test": "npm run test:apex && npm run test:lwc",
