--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Fixing bug with grandparent rollup reparenting, efficiency improvements",
-            "versionNumber": "1.3.21.0",
+            "versionName": "Added current version to RollupLogger, bugfixes",
+            "versionNumber": "1.3.22.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -17,10 +17,11 @@
             "path": "plugins\\CustomObjectRollupLogger",
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.3.8-0"
+                    "package": "apex-rollup@1.3.22-0"
                 }
             ],
-            "versionNumber": "0.0.9.0",
+            "versionNumber": "0.0.10.0",
+            "versionName": "Adding base Rollup string and version number",
             "versionDescription": "Adds RollupLog__c and RollupLogEntry__c custom objects to allow storage of rollup debug logs",
             "default": false,
             "unpackagedMetadata": {
@@ -32,13 +33,14 @@
             "path": "plugins\\NebulaLogger",
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.3.8-0"
+                    "package": "apex-rollup@1.3.22-0"
                 },
                 {
                     "package": "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements"
                 }
             ],
-            "versionNumber": "0.0.5.0",
+            "versionNumber": "0.0.6.0",
+            "versionName": "Adding base Rollup string and version number",
             "versionDescription": "Provides an adapter that hooks rollup debug logging up to Nebula Logger",
             "default": false,
             "unpackagedMetadata": {
@@ -68,11 +70,11 @@
             "path": "plugins\\ExtraCodeCoverage",
             "package": "Apex Rollup - Extra Code Coverage",
             "versionName": "Updating code coverage",
-            "versionNumber": "0.0.1.0",
+            "versionNumber": "0.0.3.0",
             "default": false,
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.3.15-0"
+                    "package": "apex-rollup@1.3.21-0"
                 }
             ]
         }
@@ -83,25 +85,25 @@
     "packageAliases": {
         "apex-rollup": "0Ho6g000000TNcOCAW",
         "Apex Rollup - Custom Logger": "0Ho6g000000Gn8ZCAS",
-        "Apex Rollup - Custom Logger@0.0.8-0": "04t6g000008ShzjAAC",
         "Apex Rollup - Custom Logger@0.0.9-0": "04t6g000008Si1GAAS",
+        "Apex Rollup - Custom Logger@0.0.10-0": "04t6g000008SijqAAC",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
-        "Apex Rollup - Nebula Logger@0.0.4-0": "04t6g000008ShzoAAC",
         "Apex Rollup - Nebula Logger@0.0.5-0": "04t6g000008Si1BAAS",
+        "Apex Rollup - Nebula Logger@0.0.6-0": "04t6g000008SiisAAC",
         "Nebula Logger - Unlocked Package@4.5.2-0-plugin-framework-enhancements": "04t5Y0000027FNaQAM",
         "Apex Rollup - Rollup Callback": "0Ho6g000000GnA1CAK",
         "Apex Rollup - Rollup Callback@0.0.1-0": "04t6g000008ShTJAA0",
         "Apex Rollup - Rollup Callback@0.0.2-0": "04t6g000008ShztAAC",
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
         "Apex Rollup - Extra Code Coverage@0.0.1-0": "04t6g000008SiTHAA0",
+        "Apex Rollup - Extra Code Coverage@0.0.3-0": "04t6g000008Sii9AAC",
         "apex-rollup@1.3.0-0": "04t6g000008ShUCAA0",
-        "apex-rollup@1.3.8-0": "04t6g000008Si24AAC",
-        "apex-rollup@1.3.15-0": "04t6g000008SiRGAA0",
         "apex-rollup@1.3.16-0": "04t6g000008SiSdAAK",
         "apex-rollup@1.3.17-0": "04t6g000008SiTgAAK",
         "apex-rollup@1.3.18-0": "04t6g000008SiUyAAK",
         "apex-rollup@1.3.19-0": "04t6g000008SiVIAA0",
         "apex-rollup@1.3.20-0": "04t6g000008SiaJAAS",
-        "apex-rollup@1.3.21-0": "04t6g000008SigrAAC"
+        "apex-rollup@1.3.21-0": "04t6g000008SigrAAC",
+        "apex-rollup@1.3.22-0": "04t6g000008SijvAAC"
     }
 }
