--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Is Full Record Set bugfix for SUM",
-            "versionNumber": "1.5.26.0",
+            "versionName": "First finalized namespaced package version of Apex Rollup using the please__ namespace",
+            "versionNumber": "1.5.27.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -66,12 +66,13 @@
         {
             "path": "plugins\\ExtraCodeCoverage",
             "package": "Apex Rollup - Extra Code Coverage",
+            "versionDescription": "This plugin adds code coverage for Apex Rollup if you need additional code coverage for the base package",
             "versionName": "Updating code coverage",
-            "versionNumber": "0.0.13.0",
+            "versionNumber": "0.0.14.0",
             "default": false,
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.5.19-0"
+                    "package": "apex-rollup@1.5.27-0"
                 }
             ]
         },
@@ -88,8 +89,8 @@
         "Apex Rollup - Custom Logger@0.0.11-0": "04t6g000008SirvAAC",
         "Apex Rollup - Custom Logger@0.0.12-0": "04t6g000008SjqIAAS",
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
-        "Apex Rollup - Extra Code Coverage@0.0.12-0": "04t6g000008SkVZAA0",
         "Apex Rollup - Extra Code Coverage@0.0.13-0": "04t6g000008SkvLAAS",
+        "Apex Rollup - Extra Code Coverage@0.0.14-0": "04t6g000008b0i4AAA",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.6-0": "04t6g000008SiisAAC",
         "Apex Rollup - Nebula Logger@0.0.7-0": "04t6g000008b0O7AAI",
@@ -98,17 +99,8 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.5.15-0": "04t6g000008Skg4AAC",
-        "apex-rollup@1.5.16-0": "04t6g000008SklPAAS",
-        "apex-rollup@1.5.17-0": "04t6g000008SkuIAAS",
-        "apex-rollup@1.5.18-0": "04t6g000008SkucAAC",
-        "apex-rollup@1.5.19-0": "04t6g000008SkwxAAC",
-        "apex-rollup@1.5.20-0": "04t6g000008b0ObAAI",
-        "apex-rollup@1.5.21-0": "04t6g000008b0RpAAI",
-        "apex-rollup@1.5.22-0": "04t6g000008b0XjAAI",
-        "apex-rollup@1.5.23-0": "04t6g000008b0YSAAY",
-        "apex-rollup@1.5.24-0": "04t6g000008b0Z6AAI",
         "apex-rollup@1.5.25-0": "04t6g000008b0a9AAA",
-        "apex-rollup@1.5.26-0": "04t6g000008b0ceAAA"
+        "apex-rollup@1.5.26-0": "04t6g000008b0ceAAA",
+        "apex-rollup@1.5.27-0": "04t6g000008b0iTAAQ"
     }
 }
