--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Winter 23 API version upgrade",
-            "versionNumber": "1.5.28.0",
+            "versionName": "Fixes a bug with batch full recalcs that use a small Batch Chunk Size ",
+            "versionNumber": "1.5.29.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -99,7 +99,6 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.5.25-0": "04t6g000008b0a9AAA",
         "apex-rollup@1.5.26-0": "04t6g000008b0ceAAA",
         "apex-rollup@1.5.27-0": "04t6g000008b0iTAAQ",
         "apex-rollup@1.5.28-0": "04t6g000008b0inAAA"
