--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,7 +4,7 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "THIS_FISCAL_QUARTER date literal bugfix, batch full recalc speedup",
+            "versionName": "THIS_FISCAL_QUARTER date literal bugfix, FIRST/LAST now use default recalc values properly",
             "versionNumber": "1.5.31.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
