--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Fixed bug in RollupEvaluator where not having permissions to access a field while using date literals could cause a null pointer exception",
-            "versionNumber": "1.5.34.0",
+            "versionName": "Continued full recalc efficiencies ...",
+            "versionNumber": "1.5.35.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -106,6 +106,7 @@
         "apex-rollup@1.5.31-0": "04t6g000007zLpGAAU",
         "apex-rollup@1.5.32-0": "04t6g000007zLuvAAE",
         "apex-rollup@1.5.33-0": "04t6g000007zLvtAAE",
-        "apex-rollup@1.5.34-0": "04t6g000007zLxGAAU"
+        "apex-rollup@1.5.34-0": "04t6g000007zLxGAAU",
+        "apex-rollup@1.5.35-0": "04t6g000007zM2bAAE"
     }
 }
