--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "default": true,
             "package": "apex-rollup",
             "path": "rollup",
-            "versionName": "Continued full recalc efficiencies ...",
-            "versionNumber": "1.5.35.0",
+            "versionName": "Cutting even more time off of full recalculations",
+            "versionNumber": "1.5.36.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -99,12 +99,6 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method": "04t5Y0000015lslQAA",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.5.27-0": "04t6g000008b0iTAAQ",
-        "apex-rollup@1.5.28-0": "04t6g000008b0inAAA",
-        "apex-rollup@1.5.29-0": "04t6g000008b0nFAAQ",
-        "apex-rollup@1.5.30-0": "04t6g000007zLnjAAE",
-        "apex-rollup@1.5.31-0": "04t6g000007zLpGAAU",
-        "apex-rollup@1.5.32-0": "04t6g000007zLuvAAE",
         "apex-rollup@1.5.33-0": "04t6g000007zLvtAAE",
         "apex-rollup@1.5.34-0": "04t6g000007zLxGAAU",
         "apex-rollup@1.5.35-0": "04t6g000007zM2bAAE"
