--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -39,7 +39,7 @@
                     "package": "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method"
                 }
             ],
-            "versionNumber": "0.0.7.0",
+            "versionNumber": "0.0.8.0",
             "versionName": "Adding base Rollup string and version number",
             "versionDescription": "Provides an adapter that hooks rollup debug logging up to Nebula Logger",
             "default": false,
@@ -92,8 +92,8 @@
         "Apex Rollup - Extra Code Coverage@0.0.13-0": "04t6g000008SkvLAAS",
         "Apex Rollup - Extra Code Coverage@0.0.14-0": "04t6g000008b0i4AAA",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
-        "Apex Rollup - Nebula Logger@0.0.6-0": "04t6g000008SiisAAC",
         "Apex Rollup - Nebula Logger@0.0.7-0": "04t6g000008b0O7AAI",
+        "Apex Rollup - Nebula Logger@0.0.8-0": "04t6g000007zM6tAAE",
         "Apex Rollup - Rollup Callback": "0Ho6g000000GnA1CAK",
         "Apex Rollup - Rollup Callback@0.0.2-0": "04t6g000008ShztAAC",
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
